tests/ui/read-write/embed_extra_attr.stderr
error: fixcol-derive error: Did not expect fixcol attribute on embedded enum variant
  --> tests/ui/embed_extra_attr.rs:20:13
   |
20 |     Point(#[fixcol(width = 5)] Point),
   |             ^^^^^^
